--- a/views/empresa.handlebars
+++ b/views/empresa.handlebars
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE>
+ lang="pt-br">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
@@ -8,20 +8,20 @@
 	
 	<title>Empresa</title>
 
-	<link rel="shortcut icon" href="/public/gt_favicon.png">
+	<link rel="shortcut icon" href="/images/gt_favicon.png">
 	
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
 
-	<!-- Custom styles for our template -->
+		<!-- Edição bootstrap -->
 	<link rel="stylesheet" href="/css/bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="/css/main.css">
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
-	<script src="assets/js/html5shiv.js"></script>
-	<script src="assets/js/respond.min.js"></script>
+	<script src="/js/html5shiv.js"></script>
+	<script src="/js/respond.min.js"></script>
 	<![endif]-->
 </head>
 
@@ -32,7 +32,7 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="/"><img src="/public/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -73,15 +73,15 @@
 					<h1 class="page-title">Sobre a Status</h1>
 				</header>
 				<h3></h3>
-				<p><img src="/public/mac.jpg" alt="" class="img-rounded pull-right" width="300" > O Centro de Formação de Condutores status foi fundado em outubro de 2005 com a finalidade de formar Condutores responsáveis por vida e assim trazer mais Paz ao trânsito. Tendo uma equipe de instrutores formados e capacitados para contribuir com a baixa estatística de acidentes de trânsito. A Status está localizada na Baixa do Bonfim em um dos pontos turísticos de Salvador, possui uma excelente estrutura com salas de aula climatizadas e com exclusiva área coberta e fechada para treinamento
+				<p><img src="/images/mac.jpg" alt="" class="img-rounded pull-right" width="300" > O Centro de Formação de Condutores status foi fundado em outubro de 2005 com a finalidade de formar Condutores responsáveis por vida e assim trazer mais Paz ao trânsito. Tendo uma equipe de instrutores formados e capacitados para contribuir com a baixa estatística de acidentes de trânsito. A Status está localizada na Baixa do Bonfim em um dos pontos turísticos de Salvador, possui uma excelente estrutura com salas de aula climatizadas e com exclusiva área coberta e fechada para treinamento
 					 prático de motos, o ambiente é agradável e harmonioso favorecendo assim o aprendizado de seus clientes.
 					</p>
 				<h3>Misão</h3>
-				<p>Uma Declaração de missão é uma declaração do propósito de uma empresa ou organização. Esta declaração deve orientar as ações da organização, explicitar seu objetivo geral, proporcionar um senso de direção, e orientar a tomada de decisões.</p>
+				<p>Uma Declaração de missão é uma declaração do propósito de uma /empresa ou organização. Esta declaração deve orientar as ações da organização, explicitar seu objetivo geral, proporcionar um senso de direção, e orientar a tomada de decisões.</p>
 				<h3>Valores</h3>
 				<p>Em ética, valor denota o grau de importância de alguma coisa ou ação, com o objetivo de determinar quais são as melhores ações a serem tomadas ou qual a melhor maneira de viver, ou para determinar a importância de diferentes ações.</p>
 				<h3>Visão</h3>
-				<p> é a razão de existir de uma organização, ou seja, o porquê de ela ter sido criada. Na prática, seu propósito de existir é o que, no dia a dia, dá verdadeiro sentido ao trabalho da equipe e guia suas ações nesta direção. Visão – mostra aonde a empresa quer chegar e traz seus objetivos de longo prazo.</p>
+				<p> é a razão de existir de uma organização, ou seja, o porquê de ela ter sido criada. Na prática, seu propósito de existir é o que, no dia a dia, dá verdadeiro sentido ao trabalho da equipe e guia suas ações nesta direção. Visão – mostra aonde a /empresa quer chegar e traz seus objetivos de longo prazo.</p>
 				
 			</article>
 			<!-- /Article -->
@@ -172,8 +172,8 @@
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<script src="assets/js/headroom.min.js"></script>
-	<script src="assets/js/jQuery.headroom.min.js"></script>
-	<script src="assets/js/template.js"></script>
+	<script src="/js/headroom.min.js"></script>
+	<script src="/js/jQuery.headroom.min.js"></script>
+	<script src="/js/template.js"></script>
 </body>
-</html>
+<>
