--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,5 @@
-
-
-
-<!DOCTYPE html>
-
-<html lang="pt-br">
+<!DOCTYPE>
+ 
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
@@ -12,9 +8,9 @@
 	
 	<title>CFC- Status</title>
 
-	<link rel="shortcut icon" href="/assets/images/gt_favicon.png">
+	<link rel="shortcut icon" href="/images/gt_favicon.png">
 	
-	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/views//css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
 
@@ -22,12 +18,12 @@
 	<link rel="stylesheet" href="/css/bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="/css/main.css">
 	<!-- Font Awesome-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/views//css/font-awesome.min.css">
 
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- HTML5  -->
 	<!--[if lt IE 9]>
-	<script src="assets/js/html5shiv.js"></script>
-	<script src="assets/js/respond.min.js"></script>
+	<script src="/js/html5shiv.js"></script>
+	<script src="/js/respond.min.js"></script>
 	<![endif]-->
 </head>
 
@@ -38,16 +34,16 @@
 			<div class="navbar-header">
 				<!-- botão dos menu começo -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="/"><img src="/public/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li class="active"><a href="/">Início</a></li>
+					<li class="active"><a href="#">Início</a></li>
 					<li><a href="/empresa">Empresa</a></li>
 					<li class="dropdown">
 						<a href="/" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/cat-a">Cat A</a></li>
+							<li><a href="cat-a">Cat A</a></li>
 							<li class="active"><a href="/cat-b">Cat B</a></li>
 							<li class="active"><a href="/cat-ab">Cat A/B</a></li>
 							<li class="active"><a href="/adicao">Adição</a></li>
@@ -91,25 +87,29 @@
 			
 			<div class="row">
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><i class="fa fa-car" ></i><h4>1ª Habilitação de Carro</h4></div>
+					<a href="/cat-b">
+					<div class="h-caption"><i class="fa fa-car" ></i> <h4>1ª Habilitação de Carro</h4></a></div>
 					<div class="h-body text-center">
 						<p>Habilita a conduzir veículos automotores com ou sem reboque, com peso bruto total (PBT) de até 3.500 kg e lotação máxima de 8 lugares, não contando o do condutor. NÃO PERMITE dirigir veículos automotores de 02 ou 03 rodas.</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-motorcycle"></i>1ª Habilitação de Moto</h4></div>
+					<a href="/cat-a">
+					<div class="h-caption"><h4><i class="fa fa-motorcycle"></i>1ª Habilitação de Moto</h4></a></div>
 					<div class="h-body text-center">
 						<p>Habilita a conduzir veículos automotores de 2 ou 3 rodas – com ou sem carro lateral – como motocicletas, ciclomotores, motonetas e triciclos. NÃO PERMITE dirigir nenhum outro tipo de veículo automotor.</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-address-card"></i>Categoria A/B</h4></div>
+					<a href="/cat-ab">
+					<div class="h-caption"><h4><i class="fa fa-address-card"></i>Categoria A/B</h4></a></div>
 					<div class="h-body text-center">
 						<p>Além de poder tirar a primeira habilitação nas categorias “A” e “B” de forma separada, na Autoescola Reis você pode fazer os dois cursos simultaneamente, o que habilita o condutor a dirigir carros e pilotar motos.</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-plus-square"></i>Adição de Categoria</h4></div>
+					<a href="/adicao">
+					<div class="h-caption"><h4><i class="fa fa-plus-square"></i>Adição de Categoria</h4></a></div>
 					<div class="h-body text-center">
 						<p>Este curso foi desenvolvido para as pessoas que já possuem habilitação na categoria “A” ou “B” e deseja adicionar a outra categoria. Ideal para pessoas que desejam a praticidade da motocicleta em certas situações e o conforto e segurança do carro em outras. </p>
 					</div>
@@ -154,13 +154,21 @@
 		
 
 		<div class="jumbotron top-space">
+			
 			<h4>Entre em contato para mais informações.</h4>
-     		<p class="text-right"><a class="btn btn-primary btn-large">ORÇAMENTO»</a></p>
+			
+		
+			 <p class="text-right">
+				 
+				 <a class="btn btn-primary btn-large">ORÇAMENTO»</a></p>
+				 
+			 <p><img src="/images/sinalito-m.png" alt=""></p>
+			 
   		</div>
 
 </div>	<!-- /container -->
 	
-	<!-- Social links. @TODO: replace by link/instructions in template -->
+	<!-- Social links -->
 	<section id="social">
 		<div class="container">
 			<div class="wrapper clearfix">
@@ -253,8 +261,8 @@
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<script src="assets/js/headroom.min.js"></script>
-	<script src="assets/js/jQuery.headroom.min.js"></script>
-	<script src="assets/js/template.js"></script>
+	<script src="/js/headroom.min.js"></script>
+	<script src="/js/jQuery.headroom.min.js"></script>
+	<script src="/js/template.js"></script>
 </body>
-</html>
+<>
