--- a/views/adicao.handlebars
+++ b/views/adicao.handlebars
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE>
+ lang="pt-br">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
@@ -8,39 +8,38 @@
 	
 	<title>Moto</title>
 
-	<link rel="shortcut icon" href="/public/gt_favicon.png">
+	<link rel="shortcut icon" href="/images/gt_favicon.png">
 	
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
 
-	<!-- Custom styles for our template -->
+	<!-- Edição bootstrap -->
 	<link rel="stylesheet" href="/css/bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="/css/main.css">
-	
+
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
-	<script src="assets/js/html5shiv.js"></script>
-	<script src="assets/js/respond.min.js"></script>
+	<script src="/js/html5shiv.js"></script>
+	<script src="/js/respond.min.js"></script>
 	<![endif]-->
 </head>
 
 <body>
-	<script src='adicao'></script>
 	<!-- Fixed navbar -->
 	<div class="navbar navbar-inverse navbar-fixed-top headroom" >
 		<div class="container">
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="/"><img src="/public/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="/">Início</a></li>
 					<li><a href="/empresa">Empresa</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
+						<a href="/" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li class="active"><a href="/cat-a">Cat A</a></li>
 							<li><a href="/cat-b">Cat B</a></li>
@@ -63,7 +62,7 @@
 		
 		<ol class="breadcrumb">
 			<li><a href="/">Início</a></li>
-			<li class="active"> Moto</li>
+			<li class="active"> Adição</li>
 		</ol>
 
 		<div class="row">
@@ -73,23 +72,17 @@
 
 				<div class="row widget">
 					<div class="col-xs-12">
-						<h4>Lorem ipsum dolor sit</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, ratione delectus reiciendis nulla nisi pariatur molestias animi eos repellat? Vel.</p>
+						<h4>Adição de Categoria</h4>
+						<p>Serviço para condutores que já possuem CNH nas Categorias “A” ou “B” e pretendem torná-las Categoria “AB”.</p>
 					</div>
 				</div>
 				<div class="row widget">
 					<div class="col-xs-12">
-						<h4>Lorem ipsum dolor sit</h4>
-						<p><img src="/public/1.jpg" alt=""></p>
+						<h4></h4>
+						<p><img src="/images/image-ad.jpg" alt=""></p>
 					</div>
 				</div>
-				<div class="row widget">
-					<div class="col-xs-12">
-						<h4>Lorem ipsum dolor sit</h4>
-						<p><img src="/public/2.jpg" alt=""></p>
-						<p>Qui, debitis, ad, neque reprehenderit laborum soluta dolor voluptate eligendi enim consequuntur eveniet recusandae rerum? Atque eos corporis provident tenetur.</p>
-					</div>
-				</div>
+				
 
 			</aside>
 			<!-- /Sidebar -->
@@ -97,23 +90,21 @@
 			<!-- Article main content -->
 			<article class="col-md-8 maincontent">
 				<header class="page-header">
-					<h1 class="page-title">Lorem ipsum dolor sit amet, consectetur.</h1>
+					<h1 class="page-title">Adicionar categoria “A” ou “B”</h1>
 				</header>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, itaque, cumque, maxime obcaecati reprehenderit ea dignissimos amet voluptatem id excepturi facilis totam veritatis maiores eveniet neque explicabo temporibus quisquam in ex ab fugiat ipsa tempore sunt corporis nostrum quam illum!</p>
-				<p>Consectetur cupiditate labore repudiandae beatae nisi fugiat facilis natus illum vitae doloremque. In, perspiciatis, natus, impedit voluptas itaque odio repudiandae placeat nisi totam repellendus earum dolores mollitia tempore quasi beatae alias cum dicta maxime laborum corporis harum porro magnam laboriosam.</p>
-				<p>Aut, eaque, minus atque alias odio mollitia cum nisi ipsa nulla natus quae minima similique ipsam aspernatur molestias animi in deleniti nam. Tempora, labore, modi eum perspiciatis doloremque sequi nam illo corporis iusto maiores nisi recusandae repellat animi reiciendis accusamus.</p>
+				<p>Este curso foi desenvolvido para as pessoas que já possuem habilitação na categoria “A” ou “B” e deseja adicionar a outra categoria. Ideal para pessoas que desejam a praticidade da motocicleta em certas situações e o conforto e segurança do carro em outras.</p>
+				
+				<h2>Adição de Categoria A</h2>
+				<p>Conheça as etapas necessárias para a adição da categoria A:</p>
+				<p>1- Realizar curso prático de, no mínimo, 15h/aula em veículo de aprendizagem, sendo 03h/aula no período noturno.</p>
+				<p>2- Realização do exame prático (mediante agendamento prévio na Autoescola Reis)</p>
 
-				<h2>A, quibusdam, nobis, eveniet consequatur</h2>
-				<p>A, quibusdam, nobis, eveniet consequatur alias doloremque officia blanditiis fuga et numquam labore reiciendis voluptas quis repellat quos sunt non dolore consectetur at sit nam tenetur dolorem? Harum, quas, sit perspiciatis esse odit temporibus aperiam nulla aspernatur sequi fugiat tempore?</p>
-				<p>Ad velit consequuntur quo qui odit quam sapiente repudiandae et ea pariatur? Ex sapiente beatae nobis consectetur ea. Deleniti, beatae, magnam, dolorum, fuga nostrum quas laboriosam sapiente temporibus enim voluptates ullam impedit atque quae provident quos mollitia aperiam perferendis amet.</p>
-
-				<blockquote>Numquam, ut iure quia facere totam quas odit illo incidunt. Voluptatem, nostrum, ex, quasi incidunt similique cum maxime expedita unde labore inventore excepturi veniam corporis sequi facere ullam voluptates amet illum quam fuga voluptatibus ipsum atque sunt eos. Ut, necessitatibus.</blockquote>
-				<p>Odit, laudantium, dolores, natus distinctio labore voluptates in inventore quasi qui nobis quis adipisci fugit id! Aliquam alias ea modi. Porro, odio, sed veniam hic numquam qui ad molestiae sint placeat expedita? Perferendis, enim qui numquam sequi obcaecati molestiae fugiat!</p>
-				<p>Aperiam, odit, quasi, voluptate fugiat quisquam velit magni provident corporis animi facilis illo eveniet eum obcaecati adipisci blanditiis quas labore doloribus eos veniam repudiandae suscipit tempora ad harum odio eius distinctio hic deleniti. Sunt fuga ad perspiciatis repellat deleniti omnis!</p>
-
-				<h3>Numquam, ut iure quia facere totam quas odit illo incidunt</h3>
-				<p>Est, maiores, fuga sed nemo qui veritatis ducimus placeat odit quisquam dolorum. Rem, sunt, praesentium veniam maiores quia molestias eos fugit eaque ducimus veritatis provident assumenda. Quia, fuga, voluptates voluptatibus quis enim nam asperiores aliquam dignissimos ullam recusandae debitis iste.</p>
-				<p>Dignissimos, beatae, praesentium illum eos autem perspiciatis? Minus, non, tempore, illo, mollitia exercitationem tempora quas harum odio dolores delectus quidem laudantium adipisci ducimus ullam placeat eaque minima quae iure itaque corporis magni nesciunt eius sed dolor doloremque id quasi nisi.</p>
+				<h2>Adição de Categoria B</h2>
+				<p>Conheça as etapas necessárias para a adição da categoria “A”:</p>
+				<p>1- Realizar curso prático de no mínimo 15h/aula em veículo de aprendizagem, sendo 03h/aulas no período noturno</p>
+				<p>2- Curso prático de no mínimo 05h/aula em simulador de direção veicular, sendo 01h/aula com conteúdo noturno</p>
+				<p>3- Realização do exame prático (mediante agendamento prévio na Autoescola Reis)</p>
+			
 			</article>
 			<!-- /Article -->
 
@@ -166,7 +157,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="/">Início</a> | 
+								<a href="/index">Início</a> | 
 								<a href="/empresa">Empresa</a> |
 								<a href="/cat-b">Categorias</a> |
 								<a href="/contato">Contato</a> |
@@ -195,8 +186,8 @@
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<script src="assets/js/headroom.min.js"></script>
-	<script src="assets/js/jQuery.headroom.min.js"></script>
-	<script src="assets/js/template.js"></script>
+	<script src="/js/headroom.min.js"></script>
+	<script src="/js/jQuery.headroom.min.js"></script>
+	<script src="/js/template.js"></script>
 </body>
-</html>
+<>
