--- a/views/adm/inseriraulas.handlebars
+++ b/views/adm/inseriraulas.handlebars
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE>
+ lang="pt-br">
 
-<body>
-    <link rel="shortcut icon" href="./images/gt_favicon.png">
+    <link rel="shortcut icon" href="/adm/images/gt_favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./css/Padm.css">
+    <link rel="stylesheet" type="text/css" href="/adm/css/Padm.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Area do administrador</title>
 </head>
 <header>
     <div class="header-area">
         <div class="logo">
-            <a href="#">
-                <img src="./images/logoadm.png" alt="">
+            <a href="/">
+                <img src="/adm/images/logoadm.png" alt="">
             </a>
         </div>
 </header>
@@ -23,25 +22,21 @@
     <div class="container">
         <nav>
             <ul class="menu">
-                <a href="adm">
+                <a href="/adm/adm">
                     <li><i class="fa fa-user"></i> Novo Cadastro</li>
                 </a>
-                <a href="/buscar">
-                    <li><i class="fa fa-search"></i> /</li>
+                <a href="/adm/buscar">
+                    <li><i class="fa fa-search"></i> Buscar</li>
                 </a>
-                <a href="/deletar">
-                    <li><i class="fa fa-trash"></i> Deletar</li>
-                </a>
-                <a href="/solicitacoes">
+                
+                <a href="/adm/solicitacoes">
                     <li><i class="fa fa-bell"></i> Solicitações</li>
                 </a>
-                <a href="/inseriraulas">
+                <a href="/adm/inseriraulas">
                     <li><i class="fa fa-folder"></i> Inserir Aulas</li>
                 </a>
-                <a href="/historicoaluno">
-                    <li><i class="fa fa-history"></i> Histórico de Aluno</li>
-                </a>
-                <a href="/AdmLogin">
+                
+                <a href="/portal-aluno">
                     <li><i class="fa fa-sign-out"></i> Encerrar</li>
                 </a>
             </ul>
@@ -50,21 +45,30 @@
         <section>
             <!-- final do menu -->
             <div class="mininav">
-                <h1>Inserir Aulas</h1>
+                <h1>Aulas Teóricas/ Práticas</h1>
             </div>
             <br>
-            <!-- formulário de Cadastro de Aluno -->
-            <div class="text-f">
-                <form method="post" action="../Controller/cadastro.php">
+             <!-- formulário de Cadastro de Aluno -->
+             <div class="text-f">
+                <form method="post" action="">
 
-                   
-                 
+                    <label> Nome Completo</label><br>
+                    <input type="text" name="nome" class="campo" maxlenght="40" required autofocus><br>
+                    <label>CPF</label> <br>
+                    <input type="text" name="cpf" class="campo" id="cpf" maxlenght="14">
                     <br>
+                    <label>Aulas Teóricas</label>
                     <br>
+                    <input type="file" id="file1"name="file1">
+                    <br><br>
+                    <label>Aulas Práticas</label><br>
+                    <input type="file" id="file2"name="file2">
+                    <br><br>
+                    <input type="submit" value="Enviar" class="btn">
+                    <input type="submit" value="Limpar" class="btn">
                 </form>
             </div>
             <!-- final do castrado do aluno -->
-        </section>
         <br>
         <br>
 
