--- a/views/adm/solicitacoes.handlebars
+++ b/views/adm/solicitacoes.handlebars
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE>
+ lang="pt-br">
 
-<body>
-    <link rel="shortcut icon" href="./images/gt_favicon.png">
+    <link rel="shortcut icon" href="/adm/images/gt_favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./css/P/adm.css">
+    <link rel="stylesheet" type="text/css" href="/adm/css/Padm.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <title>Area do /administrador</title>
+    <title>Area do administrador</title>
 </head>
 <header>
     <div class="header-area">
         <div class="logo">
             <a href="#">
-                <img src="./images/logo/adm.png" alt="">
+                <img src="/adm/images/logoadm.png" alt="">
             </a>
         </div>
 </header>
@@ -23,25 +22,20 @@
     <div class="container">
         <nav>
             <ul class="menu">
-                <a href="/adm">
+                <a href="/adm/adm">
                     <li><i class="fa fa-user"></i> Novo Cadastro</li>
                 </a>
-                <a href="/buscar">
+                <a href="/adm/buscar">
                     <li><i class="fa fa-search"></i> Buscar</li>
                 </a>
-                <a href="/deletar">
-                    <li><i class="fa fa-trash"></i> Deletar</li>
-                </a>
-                <a href="/solicitacoes">
+               
+                <a href="/adm/solicitacoes">
                     <li><i class="fa fa-bell"></i> Solicitações</li>
                 </a>
-                <a href="/inseriraulas">
+                <a href="/adm/inseriraulas">
                     <li><i class="fa fa-folder"></i> Inserir Aulas</li>
                 </a>
-                <a href="/historicoaluno">
-                    <li><i class="fa fa-history"></i> Histórico de Aluno</li>
-                </a>
-                <a href="/AdmLogin">
+                <a href="/portal-aluno">
                     <li><i class="fa fa-sign-out"></i> Encerrar</li>
                 </a>
             </ul>
@@ -50,7 +44,7 @@
         <section>
             <!-- final do menu -->
             <div class="mininav">
-                <h1>Solicitações</h1>
+                <h1>Solicitações de Alunos</h1>
             </div>
             <br>
             <!-- formulário de Cadastro de Aluno -->
@@ -72,7 +66,7 @@
 
 
 
-
+<>
     
 
 
@@ -80,3 +74,4 @@
 
 
 </body>
+<>
