--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE>
+ lang="pt-br">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
@@ -8,31 +8,31 @@
 	
 	<title>Administração</title>
 
-	<link rel="shortcut icon" href="/public/gt_favicon.png">
+	<link rel="shortcut icon" href="/images/gt_favicon.png">
 	
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
 
-	<!-- Custom styles for our template -->
+		<!-- Edição bootstrap -->
 	<link rel="stylesheet" href="/css/bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="/css/main.css">
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
-	<script src="assets/js/html5shiv.js"></script>
-	<script src="assets/js/respond.min.js"></script>
+	<script src="/js/html5shiv.js"></script>
+	<script src="/js/respond.min.js"></script>
 	<![endif]-->
 </head>
 
 <body>
-	<!-- Fixed navbar -->
+	<!-- Inicio do Menu-->
 	<div class="navbar navbar-inverse navbar-fixed-top headroom" >
 		<div class="container">
 			<div class="navbar-header">
-				<!-- Button for smallest screens -->
+				
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="/"><img src="/public/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -43,17 +43,17 @@
 						<ul class="dropdown-menu">
 							<li><a href="/cat-a">Cat A</a></li>
 							<li><a href="/cat-b">Cat B</a></li>
-							<li class="active"><a href="/cat-abl">Cat A/B</a></li>
+							<li class="active"><a href="/cat-ab">Cat A/B</a></li>
 							<li class="active"><a href="/adicao">Adição</a></li>
 						</ul>
 					</li>
 					<li><a href="/contato">Contato</a></li>
 					<li class="active"><a class="btn" href="/portal-aluno">Portal do Aluno</a></li>
 				</ul>
-			</div><!--/.nav-collapse -->
+			</div>
 		</div>
 	</div> 
-	<!-- /.navbar -->
+	<!-- Final do Menu-->
 
 	<header id="head" class="secondary"></header>
 
@@ -67,7 +67,7 @@
 
 		<div class="row">
 			
-			<!-- Article main content -->
+			<!-- Inicio do Login Admin -->
 			<article class="col-xs-12 maincontent">
 				<header class="page-header">
 					<h1 class="page-title"><b>Administrador</b></h1>
@@ -94,9 +94,10 @@
 
 								<div class="row">
 									<div class="col-lg-8">
-										<b><a href="./adm/adm.html"></a></b>
+										
 									</div>
 									<div class="col-lg-4 text-right">
+										<a href="./adm/adm"></a>
 										<button class="btn btn-action" type="submit">Entrar</button>
 									</div>
 								</div>
@@ -107,10 +108,11 @@
 				</div>
 				
 			</article>
-			<!-- /Article -->
+			<!-- Final do Login Admin -->
 
 		</div>
-	</div>	<!-- /container -->
+	</div>	
+	<!-- Começo do Footer -->
 	
 
 	<footer id="footer" class="top-space">
@@ -148,7 +150,7 @@
 						</div>
 					</div>
 
-				</div> <!-- /row of widgets -->
+				</div> 
 			</div>
 		</div>
 
@@ -159,7 +161,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="/">Início</a> | 
+								<a href="/index">Início</a> | 
 								<a href="/empresa">Empresa</a> |
 								<a href="/cat-b">Categorias</a> |
 								<a href="/contato">Contato</a> |
@@ -176,20 +178,20 @@
 						</div>
 					</div>
 
-				</div> <!-- /row of widgets -->
+				</div> 
 			</div>
 		</div>
 	</footer>	
-		
+	<!-- Final do Footer -->	
 
 
 
 
-	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
+	<!-- JavaScript -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<script src="assets/js/headroom.min.js"></script>
-	<script src="assets/js/jQuery.headroom.min.js"></script>
-	<script src="assets/js/template.js"></script>
+	<script src="/js/headroom.min.js"></script>
+	<script src="/js/jQuery.headroom.min.js"></script>
+	<script src="/js/template.js"></script>
 </body>
-</html>
+<>
