:construction:  Inserindo Select

--- a/views/adm/buscar.handlebars
+++ b/views/adm/buscar.handlebars
@@ -59,7 +59,7 @@
             <br>
             <!-- formulário de Cadastro de Aluno -->
             <div class="text-f">
-                <form method="post" action="../Controller/cadastro.php">
+                <a href="/adm/buscado"></a>
 
                    
                     <label>CPF do Aluno</label> <br>
