:bug: resolvir o bug da busca

--- a/views/adm/buscar.handlebars
+++ b/views/adm/buscar.handlebars
@@ -61,10 +61,10 @@
             <div class="text-f">
                 
 
-                   <form method="POST" action="">
+                   <form method="post" action="">
                     <label>CPF do Aluno</label> <br>
                     <input type="text" name="pesquisa" class="campo" id="cpf" maxlenght="14">
-                    </form>
+                    
                     <br>
     
 
