:rocket: Inserindo select do crud

--- a/views/adm/inseriraulas.handlebars
+++ b/views/adm/inseriraulas.handlebars
@@ -50,13 +50,9 @@
             <br>
              <!-- formulário de Cadastro de Aluno -->
              <div class="text-f">
-                <form method="post" action="">
+                <form method="POST" action="">
 
-                    <label> Nome Completo</label><br>
-                    <input type="text" name="nome" class="campo" maxlenght="40" required autofocus><br>
-                    <label>CPF</label> <br>
-                    <input type="text" name="cpf" class="campo" id="cpf" maxlenght="14">
-                    <br>
+                   
                     <label>Aulas Teóricas</label>
                     <br>
                     <input type="file" id="file1"name="file1">
@@ -76,7 +72,7 @@
 
 
 
-<>
+
     
 
 
@@ -84,4 +80,3 @@
 
 
 </body>
-<>
