--- a/views/aluno/solicitacao.handlebars
+++ b/views/aluno/solicitacao.handlebars
@@ -48,7 +48,7 @@
            
             <!-- formulário de Cadastro de Aluno -->
             <div class="text-f">
-                <form method="post" action="../Controller/cadastro.php">
+                <form method="post" action="">
 
                     <label> Nome Completo</label><br>
                     <input type="text" name="nome" class="campo" maxlenght="40" required autofocus><br>
@@ -86,4 +86,3 @@
 
     
 </body>
-<>
